--- a/index.html
+++ b/index.html
@@ -1,100 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, interactive-widget=resizes-content" />
-    <title>Jules Client</title>
-    <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Inter', sans-serif;
-        background-color: #050505; /* Deepest black */
-        color: white;
-      }
-      /* Custom scrollbar for webkit */
-      ::-webkit-scrollbar {
-        width: 6px;
-      }
-      ::-webkit-scrollbar-track {
-        background: #09090b;
-      }
-      ::-webkit-scrollbar-thumb {
-        background: #27272a;
-        border-radius: 3px;
-      }
-      
-      .custom-scrollbar::-webkit-scrollbar {
-        width: 4px;
-        height: 4px;
-      }
-      .custom-scrollbar::-webkit-scrollbar-track {
-        background: transparent;
-      }
-      .custom-scrollbar::-webkit-scrollbar-thumb {
-        background: #3f3f46;
-        border-radius: 2px;
-      }
-    </style>
-    <script>
-      tailwind.config = {
-        theme: {
-          extend: {
-            colors: {
-              background: '#050505',
-              surface: '#0E0E11', // Main card bg
-              surfaceHighlight: '#161619', // Slightly lighter surface
-              border: '#27272A',
-              primary: '#A855F7', // Purple
-              textMain: '#E4E4E7',
-              textMuted: '#A1A1AA',
-            },
-            typography: {
-              DEFAULT: {
-                css: {
-                  color: '#E4E4E7',
-                  a: {
-                    color: '#818cf8',
-                    '&:hover': {
-                      color: '#a5b4fc',
-                    },
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport"
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, interactive-widget=resizes-content" />
+  <title>Jules Client</title>
+  <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #050505;
+      background-image: radial-gradient(circle at 50% 0%, #1a1a2e 0%, #050505 40%);
+      background-attachment: fixed;
+      color: white;
+    }
+
+    /* Custom scrollbar for webkit */
+    ::-webkit-scrollbar {
+      width: 6px;
+    }
+
+    ::-webkit-scrollbar-track {
+      background: #09090b;
+    }
+
+    ::-webkit-scrollbar-thumb {
+      background: #27272a;
+      border-radius: 3px;
+    }
+
+    .custom-scrollbar::-webkit-scrollbar {
+      width: 4px;
+      height: 4px;
+    }
+
+    .custom-scrollbar::-webkit-scrollbar-track {
+      background: transparent;
+    }
+
+    .custom-scrollbar::-webkit-scrollbar-thumb {
+      background: #3f3f46;
+      border-radius: 2px;
+    }
+  </style>
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          colors: {
+            background: '#050505',
+            surface: '#0E0E11', // Main card bg
+            surfaceHighlight: '#161619', // Slightly lighter surface
+            border: '#27272A',
+            primary: '#A855F7', // Purple
+            textMain: '#E4E4E7',
+            textMuted: '#A1A1AA',
+          },
+          typography: {
+            DEFAULT: {
+              css: {
+                color: '#E4E4E7',
+                a: {
+                  color: '#818cf8',
+                  '&:hover': {
+                    color: '#a5b4fc',
                   },
-                  code: {
-                    color: '#e4e4e7',
-                    backgroundColor: 'rgba(255,255,255,0.1)',
-                    padding: '2px 4px',
-                    borderRadius: '4px',
-                    fontWeight: '400',
-                  },
-                  'code::before': {
-                    content: '""',
-                  },
-                  'code::after': {
-                    content: '""',
-                  },
+                },
+                code: {
+                  color: '#e4e4e7',
+                  backgroundColor: 'rgba(255,255,255,0.1)',
+                  padding: '2px 4px',
+                  borderRadius: '4px',
+                  fontWeight: '400',
+                },
+                'code::before': {
+                  content: '""',
+                },
+                'code::after': {
+                  content: '""',
                 },
               },
             },
-          }
+          },
         }
       }
-    </script>
-  <script type="importmap">
-{
-  "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.563.0",
-    "react-markdown": "https://esm.sh/react-markdown@9?bundle",
-    "remark-gfm": "https://esm.sh/remark-gfm@4?bundle"
-  }
-}
-</script>
+    }
+  </script>
+
 </head>
-  <body class="antialiased">
-    <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-  </body>
+
+<body class="antialiased">
+  <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
+</body>
+
 </html>
