--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, interactive-widget=resizes-content" />
   <title>Jules Client</title>
+  <meta name="theme-color" content="#000000">
+  <link rel="icon" href="/pwa-192x192.png">
+  <link rel="apple-touch-icon" href="/pwa-192x192.png">
   <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
