--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <style>
     body {
       font-family: 'Inter', sans-serif;
-      background-color: #050505;
-      background-image: radial-gradient(circle at 50% 0%, #1a1a2e 0%, #050505 40%);
+      background-color: #0c0c0c;
+      background-image: radial-gradient(circle at 50% 0%, #1a1a2e 0%, #0c0c0c 40%);
       background-attachment: fixed;
       color: white;
     }
@@ -53,7 +53,7 @@
       theme: {
         extend: {
           colors: {
-            background: '#050505',
+            background: '#0c0c0c',
             surface: '#0E0E11', // Main card bg
             surfaceHighlight: '#161619', // Slightly lighter surface
             border: '#27272A',
