--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport"
-    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, interactive-widget=resizes-content" />
+    content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, interactive-widget=resizes-content, viewport-fit=cover" />
   <title>Jules Client</title>
   <meta name="theme-color" content="#000000">
   <link rel="icon" href="/pwa-192x192.png">
   <link rel="apple-touch-icon" href="/pwa-192x192.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   <script src="https://cdn.tailwindcss.com?plugins=typography"></script>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   <style>
@@ -46,6 +48,33 @@
     .custom-scrollbar::-webkit-scrollbar-thumb {
       background: #3f3f46;
       border-radius: 2px;
+    }
+
+    /* Mobile overflow fixes */
+    * {
+      box-sizing: border-box;
+    }
+
+    /* Ensure proper text wrapping with overflow-wrap */
+    .overflow-wrap-anywhere {
+      overflow-wrap: anywhere;
+      word-break: break-word;
+    }
+
+    /* Prevent horizontal overflow on small screens */
+    @media (max-width: 640px) {
+
+      pre,
+      code {
+        max-width: 100%;
+        overflow-x: auto;
+      }
+
+      /* Ensure all content respects viewport */
+      #root {
+        max-width: 100vw;
+        overflow-x: hidden;
+      }
     }
   </style>
   <script>
@@ -87,6 +116,15 @@
               },
             },
           },
+          keyframes: {
+            shimmer: {
+              '0%': { backgroundPosition: '-200% 0' },
+              '100%': { backgroundPosition: '200% 0' }
+            }
+          },
+          animation: {
+            shimmer: 'shimmer 2s linear infinite',
+          }
         }
       }
     }
