--- a/index.html
+++ b/index.html
@@ -20,6 +20,10 @@
       background-image: radial-gradient(circle at 50% 0%, #1a1a2e 0%, #0c0c0c 40%);
       background-attachment: fixed;
       color: white;
+      /* Improve text rendering on mobile */
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+      text-rendering: optimizeLegibility;
     }
 
     /* Custom scrollbar for webkit */
@@ -55,14 +59,32 @@
       box-sizing: border-box;
     }
 
+    /* Improve touch scrolling on iOS */
+    * {
+      -webkit-overflow-scrolling: touch;
+    }
+
     /* Ensure proper text wrapping with overflow-wrap */
     .overflow-wrap-anywhere {
       overflow-wrap: anywhere;
       word-break: break-word;
     }
 
-    /* Prevent horizontal overflow on small screens */
+    /* Minimum touch target size for mobile accessibility */
     @media (max-width: 640px) {
+
+      /* iOS minimum: 44x44px, Android minimum: 48x48px */
+      button,
+      a,
+      [role="button"] {
+        min-height: 44px;
+      }
+
+      /* Improve tap highlighting */
+      button,
+      a {
+        -webkit-tap-highlight-color: rgba(99, 102, 241, 0.1);
+      }
 
       pre,
       code {
@@ -74,6 +96,53 @@
       #root {
         max-width: 100vw;
         overflow-x: hidden;
+      }
+
+      /* Better code block handling on mobile */
+      pre {
+        font-size: 13px;
+        line-height: 1.5;
+      }
+
+      /* Improve horizontal scroll indicator */
+      pre::-webkit-scrollbar {
+        height: 6px;
+      }
+
+      pre::-webkit-scrollbar-thumb {
+        background: #3f3f46;
+        border-radius: 3px;
+      }
+    }
+
+    /* Tablet optimizations */
+    @media (min-width: 641px) and (max-width: 1024px) {
+
+      button,
+      a,
+      [role="button"] {
+        min-height: 40px;
+      }
+    }
+
+    /* Prevent zoom on input focus for iOS */
+    @media screen and (max-width: 640px) {
+
+      input[type="text"],
+      input[type="password"],
+      input[type="email"],
+      input[type="search"],
+      textarea,
+      select {
+        font-size: 16px !important;
+      }
+    }
+
+    /* Safe area handling for notched devices */
+    @supports (padding: max(0px)) {
+      body {
+        padding-left: max(0px, env(safe-area-inset-left));
+        padding-right: max(0px, env(safe-area-inset-right));
       }
     }
   </style>
