--- a/index.html
+++ b/index.html
@@ -26,32 +26,36 @@
       text-rendering: optimizeLegibility;
     }
 
-    /* Custom scrollbar for webkit */
+    /* Hide scrollbars globally while keeping scroll functionality */
     ::-webkit-scrollbar {
-      width: 6px;
+      display: none;
     }
 
-    ::-webkit-scrollbar-track {
-      background: #09090b;
+    * {
+      scrollbar-width: none;
+      -ms-overflow-style: none;
     }
 
-    ::-webkit-scrollbar-thumb {
-      background: #27272a;
-      border-radius: 3px;
-    }
+    /* Disable hold-to-select on mobile only */
+    @media (max-width: 640px) {
 
-    .custom-scrollbar::-webkit-scrollbar {
-      width: 4px;
-      height: 4px;
-    }
+      body,
+      div,
+      span,
+      button,
+      a {
+        -webkit-user-select: none;
+        -webkit-touch-callout: none;
+        user-select: none;
+      }
 
-    .custom-scrollbar::-webkit-scrollbar-track {
-      background: transparent;
-    }
-
-    .custom-scrollbar::-webkit-scrollbar-thumb {
-      background: #3f3f46;
-      border-radius: 2px;
+      /* Allow text selection in inputs and textareas */
+      input,
+      textarea {
+        -webkit-user-select: text;
+        -webkit-touch-callout: default;
+        user-select: text;
+      }
     }
 
     /* Mobile overflow fixes */
