feat: introduce HomeView and InputArea components for interactive message submission with session options.

--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@
       theme: {
         extend: {
           colors: {
-            background: '#0c0c0c',
-            surface: '#0E0E11', // Main card bg
-            surfaceHighlight: '#161619', // Slightly lighter surface
-            border: '#27272A',
+            background: '#050505',
+            surface: '#121215', // Main card bg
+            surfaceHighlight: '#18181b', // Slightly lighter surface
+            border: '#3f3f46',
             primary: '#A855F7', // Purple
             textMain: '#E4E4E7',
             textMuted: '#A1A1AA',
